--- a/src/main/resources/static/CSS/signIn.css
+++ b/src/main/resources/static/CSS/signIn.css
@@ -4,3 +4,10 @@ body {
 	-ms-use-select: none;
 	user-select: none;
 }
+
+/* 전체 영역 */
+.mainArea {
+	display: flex;
+	flex-direction: column;
+	margin: 30px 50px;
+}
