index html, css

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../CSS/index.css" />
-<a href="/signin" class="mainLogo">
+<a href="./" class="mainLogo">
 	<img
 		src="../img/catstargram.jpg"
 		alt="noMainLogoImg_header"
