--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -1,59 +1,73 @@
-body {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-use-select: none;
-	user-select: none;
-}
-a {
-	text-decoration: none;
-	color: black;
-}
-a:hover {
-	text-decoration: underline;
-}
-
-/* 전체 영역 */
-.mainArea {
-	display: flex;
-	flex-direction: column;
-	margin: 30px 50px;
-}
-
-.headerArea {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	margin-right: 50px;
-}
-
 .bodyArea {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 }
 
-/* .signInClick {
-	
-} */
+/* 로그인 버튼 */
+.signInClick {
+	font-size: 1.15rem;
+	border: 0;
+	border-radius: 50px;
+	margin: 0 0 10px 0;
+	padding: 15px;
+	transition-duration: 0.3s;
+}
+.signInClick:hover {
+	background-color: rgba(211, 211, 211, 0.657);
+}
 
 .leftArea {
 	display: flex;
 	flex-direction: column;
+	margin-left: 30px;
 }
 
 .menuBarArea {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+}
+.menuBarBtn {
+	display: flex;
+	/* flex-direction: row; */
+	align-items: center;
+	justify-content: center;
+	width: 100px;
+	background-color: rgba(255, 255, 255, 0);
+	border: 0;
+	border-radius: 50px;
+	margin-left: 0;
+	margin-right: 0;
+	margin-bottom: 10px;
+	padding: 10px 10px;
+	cursor: pointer;
+	text-align: center;
+	transition-duration: 0.3s;
+}
+.menuBarBtn:hover {
+	background-color: rgba(211, 211, 211, 0.404);
+}
+.menuBarBtn button {
+	font-size: 1.3rem;
+}
+.radioBtnImg {
+	width: 20px;
+	height: 20px;
+}
+
+.centerArea {
+	display: flex;
+	flex-direction: column;
+}
+.map {
+	border-radius: 50px;
+	width: 500px;
+	height: 500px;
 }
 
 .rightArea {
 	display: flex;
 	flex-direction: row;
-}
-.mainLogo {
-	margin: 2vw;
-}
-.mainLogoImg {
-	width: 200px;
-	height: 100px;
+	margin-right: 30px;
 }
