--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>방사능 지도</title>
 		<link rel="stylesheet" href="../CSS/settings.css" />
+		<link rel="stylesheet" href="../CSS/common.css" />
 		<link rel="stylesheet" href="../CSS/index.css" />
 	</head>
 
@@ -16,26 +17,36 @@
 				<div class="logoArea">
 					<head th:replace="common/header"></head>
 				</div>
-				<!-- 로그인하기 -->
+				<!-- 로그인 버튼 -->
 				<div class="signInClick">
 					<a href="/signin">로그인</a>
 				</div>
 			</div>
-			<!-- 왼쪽 가운데 오른쪽 영역 -->
+
+			<!-- body 영역 -->
 			<div class="bodyArea">
 				<!-- 왼쪽 영역 -->
 				<div class="leftArea">
 					<!-- 메뉴 바 -->
 					<div class="menuBarArea">
-						<div>방사능</div>
-						<div>날씨</div>
+						<div class="menuBarBtn">
+							<img
+								src="../img/radioBtn.png"
+								alt="noRadioBtnImg"
+								class="radioBtnImg"
+							/>
+							<button class="">방사능</button>
+						</div>
+						<div class="menuBarBtn">
+							<button class="">날씨</button>
+						</div>
 					</div>
 				</div>
 
 				<!-- 가운데 영역(지도) -->
 				<div class="centerArea">
-					<section>
-						<img src="../img/cat5.jpg" alt="noMainArea" />
+					<section class="mapArea">
+						<img src="../img/cat5.jpg" alt="noMainArea" class="map" />
 					</section>
 				</div>
 
