--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -4,12 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>방사능 지도-로그인</title>
-		<link rel="stylesheet" href="../static/CSS/settings.css" />
-		<link rel="stylesheet" href="../static/CSS/signIn.css" />
+		<link rel="stylesheet" href="../CSS/settings.css" />
+		<link rel="stylesheet" href="../CSS/common.css" />
+		<link rel="stylesheet" href="../CSS/signIn.css" />
 	</head>
-   <head th:replace="common/header">
 	<body>
-		<h1>로그인</h1>
-		<a href="./signup.html">회원가입</a>
+		<div>
+			<head th:replace="common/header" />
+		</div>
+		<div>
+			<a href="./signup.html">회원가입</a>
+		</div>
 	</body>
 </html>
