--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,8 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>방사능 지도-회원가입</title>
-		<link rel="stylesheet" href="../static/CSS/settings.css" />
-		<link rel="stylesheet" href="../static/CSS/signUp.css" />
+		<link rel="stylesheet" href="../CSS/settings.css" />
+		<link rel="stylesheet" href="../CSS/common.css" />
+		<link rel="stylesheet" href="../CSS/signUp.css" />
 	</head>
 	<head th:replace="common/header"></head>
 	<body>
