--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 			<!-- header 영역 -->
 			<div class="headerArea">
 				<div class="logoArea">
-					<head th:replace="common/header"></head>
+					<head th:replace="common/header" />
 				</div>
 				<!-- 로그인 버튼 -->
 				<div class="signInClick">
