--- a/src/main/resources/templates/kakaomap.html
+++ b/src/main/resources/templates/kakaomap.html
@@ -5,7 +5,7 @@
     <title>Kakao 지도 시작하기</title>
 </head>
 <body>
-<div id="map" style="width:500px;height:400px;"></div>
+<div id="map" style="width:500px;height:400px; left: 5%;right: auto;" ></div>
 
 
 
