--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -19,7 +19,7 @@
 				</div>
 				<!-- 로그인 버튼 -->
 				<div class="signInClick">
-					<a href="/signin">로그인</a>
+					<a href="./">로그인</a>
 				</div>
 			</div>
 
@@ -38,7 +38,7 @@
 							<button class="">방사능</button>
 						</div>
 						<div class="menuBarBtn">
-							<button class="">날씨</button>
+							<button class="">게시판</button>
 						</div>
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 				<!-- 가운데 영역(지도) -->
 				<div class="centerArea">
 					<section class="mapArea">
-						<div id="map" style="width: 500px; height: 400px"></div>
+						<div id="map" class="map"></div>
 						<!-- <img src="../img/cat5.jpg" alt="noMainArea" class="map" /> -->
 					</section>
 				</div>
