--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -1,12 +1,11 @@
 .bodyArea {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
 }
 
 /* 로그인 버튼 */
 .signInClick {
-	font-size: 1.15rem;
+	font-size: 1.1rem;
 	border: 0;
 	border-radius: 50px;
 	margin: 0 0 10px 0;
@@ -20,13 +19,14 @@
 .leftArea {
 	display: flex;
 	flex-direction: column;
-	margin-left: 30px;
+	margin-left: 15px;
 }
 
 .menuBarArea {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-right: 5px;
 }
 .menuBarBtn {
 	display: flex;
@@ -61,13 +61,13 @@
 	flex-direction: column;
 }
 .map {
-	border-radius: 50px;
-	width: 500px;
-	height: 500px;
+	border-radius: 10px;
+	width: 85vw;
+	height: 50vw;
 }
 
 .rightArea {
 	display: flex;
 	flex-direction: row;
-	margin-right: 30px;
+	margin-right: 15px;
 }
