--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -18,9 +18,9 @@
 					<head th:replace="common/header" />
 				</div>
 				<!-- 로그인 버튼 -->
-				<div class="signInClick">
+				<!-- <div class="signInClick">
 					<a href="./">로그인</a>
-				</div>
+				</div> -->
 			</div>
 
 			<!-- body 영역 -->
@@ -38,6 +38,11 @@
 							<button class="">방사능</button>
 						</div>
 						<div class="menuBarBtn">
+							<img
+								src="../img/radioBtn.png"
+								alt="noRadioBtnImg"
+								class="radioBtnImg"
+							/>
 							<button class="">게시판</button>
 						</div>
 					</div>
