--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -49,7 +49,7 @@
 	background-color: rgba(211, 211, 211, 0.404);
 }
 .menuBarBtn button {
-	font-size: 1.3rem;
+	font-size: 18px;
 }
 .radioBtnImg {
 	width: 20px;
@@ -62,8 +62,8 @@
 }
 .map {
 	border-radius: 10px;
-	width: 85vw;
-	height: 50vw;
+	width: 92vw;
+	height: 47vw;
 }
 
 .rightArea {
