--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,8 +1,9 @@
 <link rel="stylesheet" href="../CSS/index.css" />
-<a href="./" class="mainLogo">
+<a href="/map/index" class="mainLogo">
 	<img
-		src="../img/catstargram.jpg"
+		src="../img/mianLogo.png"
 		alt="noMainLogoImg_header"
 		class="mainLogoImg"
 	/>
+	<div class="mainLogoLtr">MARRAD</div>
 </a>
