--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -1,8 +1,3 @@
-.bodyArea {
-	display: flex;
-	flex-direction: row;
-}
-
 /* 로그인 버튼 */
 .signInClick {
 	font-size: 1.1rem;
@@ -19,38 +14,45 @@
 .leftArea {
 	display: flex;
 	flex-direction: column;
-	margin-left: 15px;
+	margin-left: 5px;
 }
 
 .menuBarArea {
+	background-color: rgba(103, 150, 188, 0.475);
+	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-right: 5px;
+	margin: 5px 5px 0 0;
+	padding: 65px 50px 10px 2%;
+	position: absolute;
+	z-index: 2;
 }
 .menuBarBtn {
 	display: flex;
-	/* flex-direction: row; */
 	align-items: center;
 	justify-content: center;
 	width: 100px;
 	background-color: rgba(255, 255, 255, 0);
 	border: 0;
 	border-radius: 50px;
-	margin-left: 0;
-	margin-right: 0;
-	margin-bottom: 10px;
+	margin: 0 0 5px 0;
 	padding: 10px 10px;
 	cursor: pointer;
 	text-align: center;
 	transition-duration: 0.3s;
 }
 .menuBarBtn:hover {
-	background-color: rgba(211, 211, 211, 0.404);
+	background-color: #f6f6f660;
 }
 .menuBarBtn button {
 	font-size: 18px;
 }
+
+.menu {
+	font-weight: bold;
+}
+
 .radioBtnImg {
 	width: 20px;
 	height: 20px;
@@ -58,12 +60,18 @@
 
 .centerArea {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 }
+
+.mapArea {
+	position: relative;
+	z-index: 1;
+}
+
 .map {
-	border-radius: 10px;
-	width: 92vw;
-	height: 47vw;
+	border-radius: 5px;
+	width: 100vw;
+	height: 100vw;
 }
 
 .rightArea {
