--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -3,63 +3,64 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>방사능 지도</title>
+		<title>MARRAD</title>
 		<link rel="stylesheet" href="../CSS/settings.css" />
 		<link rel="stylesheet" href="../CSS/common.css" />
 		<link rel="stylesheet" href="../CSS/index.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
 	</head>
 
 	<body>
 		<!-- 전체 영역 -->
 		<div class="mainArea">
-			<!-- header 영역 -->
-			<div class="headerArea">
-				<div class="logoArea">
-					<head th:replace="common/header" />
+			<!-- 가운데 영역 -->
+			<div class="centerArea">
+				<!-- header 영역 -->
+				<div class="headerArea">
+					<div class="logoArea">
+						<head th:replace="common/header" />
+					</div>
+					<!-- 로그인 버튼 -->
+					<!-- <div class="signInClick">
+							<a href="./">로그인</a>
+						</div> -->
 				</div>
-				<!-- 로그인 버튼 -->
-				<!-- <div class="signInClick">
-					<a href="./">로그인</a>
-				</div> -->
-			</div>
-
-			<!-- body 영역 -->
-			<div class="bodyArea">
-				<!-- 왼쪽 영역 -->
-				<div class="leftArea">
-					<!-- 메뉴 바 -->
-					<div class="menuBarArea">
-						<div class="menuBarBtn">
-							<img
-								src="../img/radioBtn.png"
-								alt="noRadioBtnImg"
-								class="radioBtnImg"
-							/>
-							<button class="">방사능</button>
-						</div>
-						<div class="menuBarBtn">
-							<img
-								src="../img/radioBtn.png"
-								alt="noRadioBtnImg"
-								class="radioBtnImg"
-							/>
-							<button class="">게시판</button>
+				<!-- 메뉴 바 -->
+				<section class="mapArea">
+					<!-- 왼쪽 영역 -->
+					<div class="leftArea">
+						<div class="menuBarArea">
+							<div class="menuBarBtn">
+								<img
+									src="../img/radioactivity_mono.png"
+									alt="noRadioBtnImg"
+									class="radioBtnImg"
+								/>
+								<button class="menu" onclick="moveRadioMap()">방사능</button>
+							</div>
+							<div class="menuBarBtn">
+								<!-- <img
+									src="../img/radioBtn.png"
+									alt="noRadioBtnImg"
+									class="radioBtnImg"
+								/> -->
+								<span class="material-symbols-outlined"> menu </span>
+								<button class="menu">게시판</button>
+							</div>
 						</div>
 					</div>
-				</div>
-
-				<!-- 가운데 영역(지도) -->
-				<div class="centerArea">
-					<section class="mapArea">
-						<div id="map" class="map"></div>
-						<!-- <img src="../img/cat5.jpg" alt="noMainArea" class="map" /> -->
-					</section>
-				</div>
+					<div id="map" class="map"></div>
+					<!-- <img src="../img/cat5.jpg" alt="noMainArea" class="map" /> -->
+				</section>
 			</div>
 		</div>
 	</body>
 
 	<!-- script -->
+	<!-- kakao 지도 관련 script -->
 	<script
 		type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=LIBRARY"
@@ -92,5 +93,12 @@
 			}),
 			map
 		);
+	</script>
+
+	<!-- 웹 script -->
+	<script>
+		const moveRadioMap = (event) => {
+			location = "/map/index";
+		};
 	</script>
 </html>
