--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="../CSS/index.css" />
+<link rel="stylesheet" href="../CSS/common.css" />
 <a href="/map/index" class="mainLogo">
 	<img
 		src="../img/mianLogo.png"
