--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="../CSS/common.css" />
 <a href="/map/index" class="mainLogo">
 	<img
-		src="../img/mianLogo.png"
+		src="../img/logo_main.png"
 		alt="noMainLogoImg_header"
 		class="mainLogoImg"
 	/>
