--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -28,30 +28,28 @@
 							<a href="./">로그인</a>
 						</div> -->
 				</div>
-				<!-- 메뉴 바 -->
 				<section class="mapArea">
-					<!-- 왼쪽 영역 -->
-					<div class="leftArea">
-						<div class="menuBarArea">
-							<div class="menuBarBtn">
-								<img
-									src="../img/radioactivity_mono.png"
-									alt="noRadioBtnImg"
-									class="radioBtnImg"
-								/>
-								<button class="menu" onclick="moveRadioMap()">방사능</button>
-							</div>
-							<div class="menuBarBtn">
-								<!-- <img
-									src="../img/radioBtn.png"
-									alt="noRadioBtnImg"
-									class="radioBtnImg"
-								/> -->
-								<span class="material-symbols-outlined"> menu </span>
-								<button class="menu">게시판</button>
-							</div>
+					<!-- 메뉴 바 영역-->
+					<div class="menuBarArea">
+						<div class="menuBarBtn">
+							<img
+								src="../img/icon_radioactivity_mono.png"
+								alt="noRadioBtnImg"
+								class="radioBtnImg"
+							/>
+							<button class="menu" onclick="moveRadioMap()">방사능</button>
+						</div>
+						<div class="menuBarBtn">
+							<img
+								src="../img/icon_board.png"
+								alt="noRadioBtnImg"
+								class="radioBtnImg"
+							/>
+
+							<button class="menu">게시판</button>
 						</div>
 					</div>
+
 					<div id="map" class="map"></div>
 					<!-- <img src="../img/cat5.jpg" alt="noMainArea" class="map" /> -->
 				</section>
