--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -11,18 +11,20 @@
 	background-color: rgba(211, 211, 211, 0.657);
 }
 
+/* 메뉴 바 영역 */
 .menuBarArea {
 	width: 200px;
-	height: 105px;
-	background-color: rgba(103, 150, 188, 0.689);
+	height: 100%;
+	background-color: rgb(180, 205, 226);
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	margin: 5px 5px 0 5px;
+	margin: 10px 5px 10px 10px;
 	padding: 65px 0 10px 6px;
+	box-shadow: 0 8px 8px 0 rgb(216, 216, 216);
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 }
 .menuBarBtn {
 	display: flex;
@@ -39,7 +41,7 @@
 	transition-duration: 0.3s;
 }
 .menuBarBtn:hover {
-	background-color: #f6f6f660;
+	background-color: #f6f6f67e;
 }
 .menuBarBtn button {
 	font-size: 18px;
@@ -55,30 +57,16 @@
 	height: 30px;
 }
 
-.material-symbols-outlined {
-	width: 30px;
-	height: 30px;
-}
-
-.centerArea {
-	display: flex;
-	flex-direction: row;
-}
-
 .mapArea {
 	position: relative;
-	z-index: 1;
+	/* z-index: 1; */
+	width: 100%;
 }
 
 .map {
-	border-radius: 5px;
 	width: 100vw;
 	height: 100vw;
-	box-shadow: 0 10px 10px 0 rgba(128, 128, 128, 0.279);
-}
-
-.rightArea {
-	display: flex;
-	flex-direction: row;
-	margin-right: 15px;
+	box-shadow: 5px 5px 5px 5px rgba(128, 128, 128, 0.279);
+	position: absolute;
+	z-index: 2;
 }
