--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -21,21 +21,21 @@
 	flex-direction: column;
 	align-items: flex-start;
 	margin: 10px 5px 10px 10px;
-	padding: 65px 0 10px 6px;
-	box-shadow: 3px 3px 3px 3px rgba(216, 216, 216, 0.476);
+	padding: 65px 0 10px 10px;
+	box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(216, 216, 216, 0.173);
 	position: absolute;
 	z-index: 3;
 }
 .menuBarBtn {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	/* justify-content: center; */
 	width: 100px;
 	background-color: rgba(255, 255, 255, 0);
 	border: 0;
 	border-radius: 10px;
 	margin: 0 0 5px 0px;
-	padding: 10px 75px 10px 4px;
+	padding: 10px 70px 10px 4px;
 	cursor: pointer;
 	text-align: center;
 	transition-duration: 0.3s;
@@ -44,6 +44,22 @@
 	background-color: #f6f6f67e;
 }
 .menuBarBtn button {
+	font-size: 18px;
+}
+
+.selectedBtn {
+	display: flex;
+	align-items: center;
+	width: 100px;
+	background-color: #f6f6f67e;
+	border: 0;
+	border-radius: 10px;
+	margin: 0 0 5px 0px;
+	padding: 10px 70px 10px 4px;
+	cursor: pointer;
+	text-align: center;
+}
+.selectedBtn button {
 	font-size: 18px;
 }
 
