--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -28,32 +28,31 @@
 				<div id="map" class="map">
 					<!-- 메뉴 바 영역-->
 					<div class="menuBarArea">
-						<div class="menuBarBtn">
+						<div
+							id="radioBtn"
+							class="selectedBtn"
+							onclick="selectRadioBtn(event)"
+						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
 								alt="noRadioBtnImg"
 								class="radioBtnImg"
 							/>
-							<button class="menu" onclick="moveRadioMap()">방사능</button>
+							<button class="menu">방사능</button>
 						</div>
-						<div class="menuBarBtn">
+						<div id="eqBtn" class="menuBarBtn" onclick="selectEQBtn(event)">
 							<img
-								src="../img/icon_board.png"
+								src="../img/icon_earthquake.png"
 								alt="noRadioBtnImg"
 								class="radioBtnImg"
 							/>
-
-							<button class="menu">게시판</button>
+							<button class="menu">지진</button>
 						</div>
 					</div>
 				</div>
 			</section>
 		</div>
 	</body>
-
-
-
-
 
 	<!-- script -->
 	<!-- kakao 지도 관련 script -->
@@ -68,35 +67,6 @@
 	></script>
 
 	<script>
-		const container = document.getElementById("map");
-		const options = {
-			center: new kakao.maps.LatLng(33.450701, 126.570667),
-			level: 3,
-		};
-		const map = new kakao.maps.Map(container, options);
-		const positions = [
-			{ latlng: new kakao.maps.LatLng(33.450701, 126.570667) },
-		];
-		const clustererOptions = {
-			averageCenter: true,
-			gridSize: 50,
-			minLevel: 5,
-		};
-
-		new kakao.maps.MarkerClusterer(clustererOptions).addMarkers(
-			positions.map(function (position) {
-				return new kakao.maps.Marker({ position: position.latlng });
-			}),
-			map
-		);
-	</script>
-
-	<!-- 웹 script -->
-	<script>
-		const moveRadioMap = (event) => {
-			location = "/map/index";
-		};
-
 		// 맵 + 메뉴 바 사이즈 조절
 		document.addEventListener("DOMContentLoaded", () => {
 			const h = window.innerHeight;
@@ -109,4 +79,8 @@
 			console.log(bar.style.height);
 		});
 	</script>
+
+	<script src="../JS/kakaoMap.js"></script>
+
+	<script src="../JS/button.js"></script>
 </html>
