index 주석 수정, button.js 조건문 조건 변경

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -63,7 +63,7 @@
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"
 	></script>
 
-	// 맵 + 메뉴 바 사이즈 조절
+	<!-- 맵 + 메뉴 바 사이즈 조절 -->
 	<script>
 		document.addEventListener("DOMContentLoaded", () => {
 			const h = window.innerHeight;
