--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -15,7 +15,8 @@
 .menuBarArea {
 	width: 185px;
 	height: 100%;
-	background-color: rgb(180, 205, 226);
+	/* background-color: rgb(180, 205, 226); */
+	background-color: #5ea8c8e1;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
