earthquake database연결,위도경도 출력

--- a/src/main/resources/templates/test/test.html
+++ b/src/main/resources/templates/test/test.html
@@ -1,7 +1,6 @@
-<!-- <form action="" method="get">
+<form action="/test" method="post">
 
-  <input type="text" name="first">
+  <input type="text" name="id">
   <button>입력</button>
 
 </form>
-<form action=""></form> -->
