--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -1,6 +1,6 @@
 /* 로그인 버튼 */
 .signInClick {
-	font-size: 1.1rem;
+	font-size: 20px;
 	border: 0;
 	border-radius: 50px;
 	margin: 0 0 10px 0;
@@ -15,13 +15,12 @@
 .menuBarArea {
 	width: 185px;
 	height: 100%;
-	/* background-color: rgb(180, 205, 226); */
 	background-color: #5ea8c8e1;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	margin: 10px 5px 10px 10px;
+	margin: 10px;
 	padding: 65px 0 10px 10px;
 	box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(216, 216, 216, 0.173);
 	position: absolute;
@@ -30,12 +29,11 @@
 .menuBarBtn {
 	display: flex;
 	align-items: center;
-	/* justify-content: center; */
 	width: 100px;
 	background-color: rgba(255, 255, 255, 0);
 	border: 0;
 	border-radius: 10px;
-	margin: 0 0 5px 0px;
+	margin: 0 0 3px 0px !important;
 	padding: 10px 70px 10px 4px;
 	cursor: pointer;
 	text-align: center;
@@ -45,9 +43,10 @@
 	background-color: #f6f6f67e;
 }
 .menuBarBtn button {
-	font-size: 18px;
+	font-size: 20px;
 }
 
+/* 선택된 메뉴 */
 .selectedBtn {
 	display: flex;
 	align-items: center;
@@ -55,18 +54,22 @@
 	background-color: #f6f6f67e;
 	border: 0;
 	border-radius: 10px;
-	margin: 0 0 5px 0px;
+	margin: 0 0 3px 0px;
 	padding: 10px 70px 10px 4px;
 	cursor: pointer;
 	text-align: center;
+	transition-duration: 0.5s;
 }
 .selectedBtn button {
-	font-size: 18px;
+	font-size: 20px;
+	color: rgb(255, 37, 37);
 }
 
 .menu {
 	margin: 2px 0 0 3px;
 	font-weight: bold;
+	font-family: "BMNanum Gothic";
+	font-size: 20px;
 }
 
 .radioBtnImg {
@@ -74,9 +77,9 @@
 	height: 30px;
 }
 
+/* 지도 영역 및 지도 */
 .mapArea {
 	position: relative;
-	/* z-index: 1; */
 	width: 100%;
 }
 
