테스트 지도 추가 비동기 출력중

--- a/src/main/resources/templates/test/test.html
+++ b/src/main/resources/templates/test/test.html
@@ -1,27 +1,47 @@
 <body>
+
+  <div id="map" style="width:100%;height:350px;"></div>
+
   <form action="/test" method="post">
 
     <input type="text" name="id" id="id">
-    <button type="button" onclick="push()">비동기</button>
+    <button type="button" onclick="push()">비동기id호출</button>
     <button>입력</button>
 
+  </form>
+
+  <form action="/yeartest">
+    <input type="text" name="yeartest" id="yeartest" placeholder="검색년도를 입력하세요">
+
+    <button type="button" onclick="yeartest1()">년도입력</button>
+    <button>입력</button>
   </form>
   <hr>
 
   <div>
     이곳에 적혀야 하는데
-    <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+    <textarea name="textarea" id="textarea" cols="100vw" rows="50vh"></textarea>
     <div th:text="${earthqlist}"></div>
 
     <!-- <div th:text="${earthqlist[0]}"></div> -->
-
     <h1>[[${earthqlist}]]</h1>
-
-
   </div>
 </body>
 
+<!-- 지도용 script -->
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1599ebd89f92e779af67726a3670fb94"></script>
 <script>
+  var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = {
+      center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+      level: 3 // 지도의 확대 레벨
+    };
+  // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+  var map = new kakao.maps.Map(mapContainer, mapOption);
+</script>
+<script>
+
+
 
   const push = async () => {
     const id = document.querySelector("#id").value;
@@ -30,4 +50,13 @@
     document.querySelector("#textarea").innerText = res;
 
   }
+
+  const yeartest1 = async () => {
+
+    const year = document.querySelector("#yeartest").value;
+    const data = await fetch(`/yeartest?year=${year}`);
+    const res = await data.text();
+    document.querySelector("#textarea").innerText = res;
+  }
+
 </script>
