--- a/src/main/resources/templates/test/test.html
+++ b/src/main/resources/templates/test/test.html
@@ -1,3 +1,8 @@
+<head>
+  <meta charset="utf-8">
+
+</head>
+
 <body>
 
   <div id="map" style="width:100%;height:350px;"></div>
@@ -29,6 +34,7 @@
 </body>
 
 <!-- 지도용 script -->
+
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1599ebd89f92e779af67726a3670fb94"></script>
 <script>
   var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
@@ -39,6 +45,8 @@
   // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
   var map = new kakao.maps.Map(mapContainer, mapOption);
 </script>
+
+
 <script>
 
 
