간단한 줄 수정, 경고 코드 삭제

--- a/src/main/resources/templates/test/test.html
+++ b/src/main/resources/templates/test/test.html
@@ -71,7 +71,7 @@
 			let jlat = json[i].lat;
 			let jlon = json[i].lon;
 
-			// 마커를 생성합니다(카카오)
+			// 마커를 생성합니다
 			// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
 			var markerPosition = new kakao.maps.LatLng(jlat, jlon);
 
