--- a/src/main/resources/templates/test/test.html
+++ b/src/main/resources/templates/test/test.html
@@ -1,5 +1,8 @@
 <head>
 	<meta charset="utf-8" />
+
+	<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
 </head>
 
 <body>
@@ -12,12 +15,7 @@
 	</form>
 
 	<form action="/yeartest">
-		<input
-			type="text"
-			name="yeartest"
-			id="yeartest"
-			placeholder="검색년도를 입력하세요"
-		/>
+		<input type="text" name="yeartest" id="yeartest" placeholder="검색년도를 입력하세요" />
 
 		<button type="button" onclick="yeartest1()">비동기년도호출</button>
 		<button>입력</button>
@@ -36,10 +34,7 @@
 
 <!-- 지도용 script -->
 
-<script
-	type="text/javascript"
-	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"
-></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"></script>
 
 <script>
 	var mapContainer = document.getElementById("map"), // 지도를 표시할 div
@@ -61,7 +56,7 @@
 	// year로 검색하는 테스트 영역입니다.
 	const yeartest1 = async () => {
 		const year = document.querySelector("#yeartest").value;
-		const data = await fetch(`/yeartest?year=${year}`);
+		const data = await fetch(`/yearsearch?year=${year}`);
 		const res = await data.text();
 		const json = JSON.parse(res); //json형식으로 읽기
 		document.querySelector("#textarea").innerText = json; //textarea영역에 출력(지도에 찍히는것과는 상관없습니다.)
@@ -82,4 +77,14 @@
 			marker.setMap(map);
 		}
 	};
+</script>
+
+<div id="container"></div>
+
+
+
+<script type="module" src="/JS/contour.js">
+
+
+
 </script>
