--- a/src/main/resources/templates/map/test.html
+++ b/src/main/resources/templates/map/test.html
@@ -1,7 +1,23 @@
+<!doctype html>
+<html lang="kr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
 <body>
+
+
+
+
+
+
 <!-- 지도를 표시할 div 입니다 -->
 <div id="map" style="width:100%;height:800px;"></div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"></script>
 <script>
     var mapContainer = document.getElementById('map'), // 지도를 표시할 div
@@ -10,29 +26,30 @@
             level: 14 // 지도의 확대 레벨
         };
 
+
+
+
     // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
     var map = new kakao.maps.Map(mapContainer, mapOption);
-    var positions = [
-        {
-            title: '카카오',
-            latlng: new kakao.maps.LatLng(33.450705, 126.570677)
-        },
-        {
-            title: '생태연못',
-            latlng: new kakao.maps.LatLng(33.450936, 126.569477)
-        },
-        {
-            title: '텃밭',
-            latlng: new kakao.maps.LatLng(33.450879, 126.569940)
-        },
-        {
-            title: '근린공원',
-            latlng: new kakao.maps.LatLng(33.451393, 126.570738)
-        }
-    ];
+
+
+
+
+
 
     // 마커 이미지의 이미지 주소입니다
     var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+
+    $.ajax({
+        url: "/map/testy", // JSON 데이터를 받아올 URL.
+        type: "GET",
+        success: function(data) {
+            var positions = data.map(function(radioMap) {
+                return {
+                    title: radioMap.address,
+                    latlng: new kakao.maps.LatLng(radioMap.lat, radioMap.lon)
+                };
+            });
 
     for (var i = 0; i < positions.length; i ++) {
 
@@ -50,6 +67,15 @@
             image : markerImage // 마커 이미지
         });
     }
+        }
+    });
 
 </script>
+
+
+
+
 </body>
+
+
+</html>
