--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -62,7 +62,6 @@
 }
 .selectedBtn button {
 	font-size: 20px;
-	color: rgb(255, 37, 37);
 }
 
 .menu {
@@ -108,7 +107,7 @@
 	text-align: left;
 	overflow: hidden;
 	font-size: 12px;
-	font-family: "Malgun Gothic", dotum, "돋움", sans-serif;
+	font-family: "Nanum Gothic";
 	line-height: 1.5;
 }
 .wrap * {
@@ -154,7 +153,7 @@
 }
 .info .desc {
 	position: relative;
-	margin: 13px 0 0 90px;
+	margin: 10px 30px 0 10px;
 	height: 75px;
 }
 .desc .ellipsis {
@@ -189,4 +188,8 @@
 }
 .info .link {
 	color: #5085bb;
+}
+
+.eqDetail {
+	font-weight: bold;
 }
