index.html 함수 삭제, kakaoMap.js 수정

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -31,7 +31,7 @@
 						<div
 							id="radioBtn"
 							class="selectedBtn"
-							onclick="selectRadioBtn(event), closeEqMarker()"
+							onclick="selectRadioBtn(event)"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
