테스트용contour.js, contourtest.js Taecontroller 생성

--- a/src/main/resources/templates/test/test.html
+++ b/src/main/resources/templates/test/test.html
@@ -30,6 +30,7 @@
 		<!-- <div th:text="${earthqlist[0]}"></div> -->
 		<h1>[[${earthqlist}]]</h1>
 	</div>
+	<div id="container"></div>
 </body>
 
 <!-- 지도용 script -->
@@ -79,12 +80,8 @@
 	};
 </script>
 
-<div id="container"></div>
 
 
 
-<script type="module" src="/JS/contour.js">
 
-
-
-</script>
+<script type="module" src="/JS/contour.js"></script>
