--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -38,6 +38,40 @@
 						<img src="../img/icon_earthquake.png" alt="noRadioBtnImg" class="radioBtnImg" />
 						<button class="menu">지진</button>
 					</div>
+
+					<!-- 마커 설명 -->
+					<div class="markerInfoArea">
+						<div class="markerInfo">
+							<span>
+								<img
+									src="../img/marker_earthquake.png"
+									alt="noEqMarker"
+									class="markerInfoImg"
+								/>
+							</span>
+							<span>진도 0 ~ 1.9</span>
+						</div>
+						<div>
+							<span>
+								<img
+									src="../img/marker_earthquake_yellow.png"
+									alt="noEqMarker_yellow"
+									class="markerInfoImg"
+								/>
+							</span>
+							<span>진도 1.1 ~ 2.9</span>
+						</div>
+						<div>
+							<span>
+								<img
+									src="../img/marker_earthquake_red.png"
+									alt="noEqMarker_red"
+									class="markerInfoImg"
+								/>
+							</span>
+							<span>진도 1.1 ~ 2.9</span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
