--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -188,21 +188,32 @@
 }
 
 .markerInfoArea {
+	background-color: rgb(255, 255, 255);
 	display: flex;
 	flex-direction: row;
 	position: relative;
+	justify-content: space-evenly;
 	z-index: 3;
-	width: 300px;
-	height: 80px;
-	border: 3px solid black;
-	bottom: -700px;
-	right: -77%;
+	width: 400px;
+	height: 45px;
+	border: 0;
+	border-radius: 15px;
+	bottom: -92.5%;
+	right: -70.5%;
 	align-items: center;
 }
 .markerInfo {
-	padding: 15px;
+	display: flex;
+	flex-direction: row;
+	padding: 10px 10px 10px 10px;
+	align-items: center;
 }
 .markerInfoImg {
 	width: 20px;
 	height: 20px;
+	margin: 3px 5px 0 0;
+}
+.markerInfo_eqScale {
+	font-size: 14px;
+	font-weight: bold;
 }
