--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>MARRAD</title>
-	<link rel="stylesheet" href="../CSS/settings.css" />
-	<link rel="stylesheet" href="../CSS/common.css" />
-	<link rel="stylesheet" href="../CSS/index.css" />
-</head>
-<!-- 로그인 버튼 -->
-<!-- <div class="signInClick">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>MARRAD</title>
+		<link rel="stylesheet" href="../CSS/settings.css" />
+		<link rel="stylesheet" href="../CSS/common.css" />
+		<link rel="stylesheet" href="../CSS/index.css" />
+	</head>
+	<!-- 로그인 버튼 -->
+	<!-- <div class="signInClick">
 				<a href="./">로그인</a>
 			</div> -->
 
-<body>
-	<!-- 전체 영역 -->
-	<div class="mainArea">
-		<!-- header 영역 -->
-		<div class="headerArea">
-			<div class="logoArea">
-
-				<head th:replace="common/header" />
+	<body>
+		<!-- 전체 영역 -->
+		<div class="mainArea">
+			<!-- header 영역 -->
+			<div class="headerArea">
+				<div class="logoArea">
+					<head th:replace="common/header" />
+				</div>
 			</div>
-		</div>
 
-		<!-- 지도 영역 -->
-		<section class="mapArea">
-			<div id="map" class="map">
-				<!-- 메뉴 바 영역-->
-				<div class="menuBarArea">
-					<div id="radioBtn" class="selectedBtn" onclick="selectRadioBtn(event)">
-						<img src="../img/icon_radioactivity_mono.png" alt="noRadioBtnImg" class="radioBtnImg" />
-						<button class="menu">방사능</button>
+			<!-- 지도 영역 -->
+			<section class="mapArea">
+				<div id="map" class="map">
+					<!-- 메뉴 바 영역-->
+					<div class="menuBarArea">
+						<div
+							id="radioBtn"
+							class="selectedBtn"
+							onclick="selectRadioBtn(event)"
+						>
+							<img
+								src="../img/icon_radioactivity_mono.png"
+								alt="noRadioBtnImg"
+								class="radioBtnImg"
+							/>
+							<button class="menu">방사능</button>
+						</div>
+						<div
+							id="eqBtn"
+							class="menuBarBtn"
+							onclick="selectEQBtn(event), eqYearPush()"
+						>
+							<img
+								src="../img/icon_earthquake.png"
+								alt="noRadioBtnImg"
+								class="radioBtnImg"
+							/>
+							<button class="menu">지진</button>
+						</div>
 					</div>
-					<div id="eqBtn" class="menuBarBtn" onclick="selectEQBtn(event), eqYearPush()">
-						<img src="../img/icon_earthquake.png" alt="noRadioBtnImg" class="radioBtnImg" />
-						<button class="menu">지진</button>
-					</div>
-
 					<!-- 마커 설명 -->
 					<div class="markerInfoArea">
 						<div class="markerInfo">
@@ -49,9 +63,9 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span>진도 0 ~ 1.9</span>
+							<span class="markerInfo_eqScale">진도 0 ~ 1.9</span>
 						</div>
-						<div>
+						<div class="markerInfo">
 							<span>
 								<img
 									src="../img/marker_earthquake_yellow.png"
@@ -59,9 +73,9 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span>진도 1.1 ~ 2.9</span>
+							<span class="markerInfo_eqScale">진도 1.1 ~ 2.9</span>
 						</div>
-						<div>
+						<div class="markerInfo">
 							<span>
 								<img
 									src="../img/marker_earthquake_red.png"
@@ -69,36 +83,37 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span>진도 1.1 ~ 2.9</span>
+							<span class="markerInfo_eqScale">진도 3 이상</span>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-	</div>
-</body>
+			</section>
+		</div>
+	</body>
 
-<!-- script -->
+	<!-- script -->
 
-<!-- kakao 지도 관련 script -->
-<script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"></script>
+	<!-- kakao 지도 관련 script -->
+	<script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+	<script
+		type="text/javascript"
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"
+	></script>
 
-<!-- 맵 + 메뉴 바 화면 사이즈 조절 -->
-<script>
-	document.addEventListener("DOMContentLoaded", () => {
-		const h = window.innerHeight;
-		const map = document.querySelector("#map");
-		map.style.height = `${h}px`;
+	<!-- 맵 + 메뉴 바 화면 사이즈 조절 -->
+	<script>
+		document.addEventListener("DOMContentLoaded", () => {
+			const h = window.innerHeight;
+			const map = document.querySelector("#map");
+			map.style.height = `${h}px`;
 
-		const bar = document.querySelector(".menuBarArea");
+			const bar = document.querySelector(".menuBarArea");
 
-		bar.style.height = `${0.88 * parseInt(map.style.height)}px`;
-		console.log(`브라우저 세로 길이: ${bar.style.height}`);
-	});
-</script>
+			bar.style.height = `${0.88 * parseInt(map.style.height)}px`;
+			console.log(`브라우저 세로 길이: ${bar.style.height}`);
+		});
+	</script>
 
-<script src="../JS/kakaoMap.js"></script>
-<script src="../JS/button.js"></script>
-
+	<script src="../JS/kakaoMap.js"></script>
+	<script src="../JS/button.js"></script>
 </html>
